@@ -10,6 +10,8 @@ See http://lucene.apache.org/solr for more information.
 
 ================= FullStory ================
 
+* SOLR-7566: Search requests should return the shard name that is down. (Marius Grama, shalin)
+
 * SOLR-7090: Cross node join - FullJoinQParserPlugin (Scott Blum)
 
 * SOLR-7956: There are interrupts on shutdown in places that can cause ChannelAlreadyClosed
